# geometrize

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.data/: cube.stl  cylinder.stl  sphere.stl
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-tests.yml
examples/: basic_usage.py
geometrize/: __init__.py  config.py  data_processing.py  generate_test_shapes.py  losses.py  model.py  pipeline.py  plan.txt  shape_generator.py  test_losses.py  test_model.py  test_processing.py  token_map.py
tests/: __init__.py  conftest.py  test_losses.py  test_model.py  test_pipeline.py  test_processing.py  test_shape_generator.py  test_token_conversion.py
