[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geometrize"
version = "0.1.0"
description = "Geometrize: Automatic geometry parameterization using neural networks"
readme = "README.md"
authors = [
    {name = "Roberto Hart-Villamil", email = "rob.hartvillamil@gmail.com"},
]
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.6.0",
    "numpy>=2.2.3",
    "matplotlib>=3.10.1",
    "open3d>=0.19.0",
    "build123d>=0.9.1",
    "numpy-stl>=3.2.0",
]

[project.urls]
"Homepage" = "https://github.com/robh96/geometrize"
"Bug Tracker" = "https://github.com/robh96/geometrize/issues"